# aiocraft

./: .editorconfig  Cargo.toml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: CI.yml
aiocraft/: __init__.py  __main__.py  aiocraft.pyi  client.py  dispatcher.py  helpers.py  packet.py  primitives.py  server.py  session.py
aiocraft/auth/: mojang.py
aiocraft/impl/: dispatcher.py
aiocraft/mc/: __init__.py  chunk.py  compiler.py  definitions.py  identity.py  mctypes.py  packet.py  token.py  types.py
aiocraft/mc/auth/: interface.py  microsoft.py  mojang.py
aiocraft/mc/proto/: __init__.py  ext.py
aiocraft/minecraft/: compiler.py  mctypes.py  types.py
aiocraft/proto/: ext.py
aiocraft/proto/handshaking/serverbound/: __init__.py
aiocraft/proto/login/clientbound/: packet_compress.py  packet_success.py
aiocraft/proto/login/serverbound/: packet_encryption_begin.py  packet_login_start.py
aiocraft/proto/play/clientbound/: packet_abilities.py  packet_acknowledge_player_digging.py  packet_attach_entity.py  packet_block_action.py  packet_block_break_animation.py  packet_camera.py  packet_chat.py  packet_chat_preview.py  packet_chat_suggestions.py  packet_clear_titles.py  packet_close_window.py  packet_collect.py  packet_craft_progress_bar.py  packet_death_combat_event.py  packet_declare_recipes.py  packet_end_combat_event.py  packet_enter_combat_event.py  packet_entity.py  packet_entity_equipment.py  packet_entity_head_rotation.py  packet_entity_metadata.py  packet_entity_sound_effect.py  packet_entity_update_attributes.py  packet_experience.py  packet_game_state_change.py  packet_held_item_slot.py  packet_hide_message.py  packet_initialize_world_border.py  packet_keep_alive.py  packet_map_chunk.py  packet_message_header.py  packet_multi_block_change.py  packet_named_entity_spawn.py  packet_open_window.py  packet_rel_entity_move.py  packet_scoreboard_objective.py  packet_scoreboard_score.py  packet_sculk_vibration_signal.py  packet_select_advancement_tab.py  packet_server_data.py  (+20 more)
aiocraft/proto/play/serverbound/: packet_arm_animation.py  packet_chat_command.py  (+25 more)
aiocraft/traits/: __init__.py  callbacks.py  runnable.py
aiocraft/util/: encryption.py  helpers.py
compiler/: proto.py
examples/: authenticator.py  chat_printer.py  tokenmaker.py
src/: chunk.rs  lib.rs  section.rs  world.rs
src/aiocraft/: __init__.py  aiocraft.pyi  client.py  dispatcher.py  packet.py  server.py  types.py
src/aiocraft/auth/: interface.py  microsoft.py
src/aiocraft/mc/: __init__.py  chunk.py  definitions.py
src/aiocraft/rs/: section.rs
src/aiocraft/traits/: callbacks.py
src/aiocraft/util/: encryption.py
(+364 files in other folders)
