[metadata]
name = aiocraft
version = 0.0.9
author = alemi
author_email = me@alemi.dev
description = asyncio-powered headless minecraft client library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alemidev/aiocraft
project_urls =
    Bug Tracker = https://github.com/alemidev/aiocraft/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    pynbt
    cryptography
    aiohttp
    termcolor
    asyncio-dgram
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
